[package]
name = "refbox"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A smart pointer with a single owner and many weak references"
keywords = ["smart", "pointer", "weak", "reference", "owner"]
categories = ["memory-management", "rust-patterns"]
repository = "https://github.com/yvesdum/refbox"

[features]
cyclic = []

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benches"
harness = false
