[package]
name = "refbox"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A Box with weak references"
keywords = ["smart", "pointer", "weak", "reference", "rc"]
categories = ["memory-management", "rust-patterns"]
repository = "https://github.com/yvesdum/refbox"

[features]
cyclic = []
cyclic_stable = []

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benches"
harness = false
